[package]
name = "chemapp_rs"
version = "0.1.0"
edition = "2021"
author = "Evgenii Nekhoroshev e.nekhoroshev@uq.edu.au, evgnekhoroshev@gmail.com"
description = "Port of ChemApp library (GTT-technologies) for thermodynamic calculations to Rust environment; includes native ChemApp functions starting with 'tq' and a higher-level interface for easier access to calculations."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.*"
tempfile = "*"
lazy_static = "*"
libloading="0.7.*"
function_name = "*"
nalgebra = "*"
serde = {version = "*", features = ["derive"]}
bincode = {version = "2.0", features=["serde","alloc"]}
chemformula = {path = "../chemformula"}
