[package]
name = "chemapp_rs"
version = "0.1.0"
edition = "2021"
author = "Evgenii Nekhoroshev e.nekhoroshev@uq.edu.au, evgnekhoroshev@gmail.com"
repository = "https://github.com/evnekdev/chemapp_rs"
description = "Port of ChemApp library (GTT-technologies) for thermodynamic calculations to Rust environment; includes native ChemApp functions starting with 'tq' and a higher-level interface for easier access to calculations."
keywords = ["chemistry", "thermodynamics", "ffi", "equilibrium", "chemapp"]
categories = ["science", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.0"
tempfile = "3.27"
lazy_static = "1.5"
libloading="0.8"
function_name = "0.3"
nalgebra = "0.32"
serde = {version = "1.0", features = ["derive"]}
bincode = {version = "2.0", features=["serde","alloc"]}
chemformula = {version = "0.1"}